@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,7 +23,8 @@
 
 /*
  * @test
- * @modules jdk.incubator.foreign java.base/jdk.internal.vm.annotation java.base/jdk.internal.misc
+ * @enablePreview
+ * @modules java.base/jdk.internal.vm.annotation java.base/jdk.internal.misc
  * @key randomness
  * @run testng/othervm TestHandshake
  * @run testng/othervm -Xint TestHandshake
@@ -31,9 +32,8 @@
  * @run testng/othervm -XX:-TieredCompilation TestHandshake
  */
 
-import jdk.incubator.foreign.MemoryAccess;
-import jdk.incubator.foreign.MemorySegment;
-
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteBuffer;
@@ -45,9 +45,10 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicLong;
 
-import jdk.incubator.foreign.ResourceScope;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
+
+import static java.lang.foreign.ValueLayout.JAVA_BYTE;
 import static org.testng.Assert.*;
 
 public class TestHandshake {
@@ -66,19 +67,19 @@ public class TestHandshake {
     @Test(dataProvider = "accessors")
     public void testHandshake(String testName, AccessorFactory accessorFactory) throws InterruptedException {
         for (int it = 0 ; it < ITERATIONS ; it++) {
-            ResourceScope scope = ResourceScope.newSharedScope();
-            MemorySegment segment = MemorySegment.allocateNative(SEGMENT_SIZE, 1, scope);
+            Arena arena = Arena.ofShared();
+            MemorySegment segment = arena.allocate(SEGMENT_SIZE, 1);
             System.out.println("ITERATION " + it);
             ExecutorService accessExecutor = Executors.newCachedThreadPool();
             start.set(System.currentTimeMillis());
             started.set(false);
             for (int i = 0; i < NUM_ACCESSORS ; i++) {
-                accessExecutor.execute(accessorFactory.make(i, segment));
+                accessExecutor.execute(accessorFactory.make(i, segment, arena));
             }
             int delay = ThreadLocalRandom.current().nextInt(MAX_DELAY_MILLIS);
             System.out.println("Starting handshaker with delay set to " + delay + " millis");
             Thread.sleep(delay);
-            accessExecutor.execute(new Handshaker(scope));
+            accessExecutor.execute(new Handshaker(arena));
             accessExecutor.shutdown();
             assertTrue(accessExecutor.awaitTermination(MAX_EXECUTOR_WAIT_SECONDS, TimeUnit.SECONDS));
             assertTrue(!segment.scope().isAlive());
@@ -88,6 +89,7 @@ public class TestHandshake {
     static abstract class AbstractSegmentAccessor implements Runnable {
         final MemorySegment segment;
         final int id;
+        final AtomicBoolean failed = new AtomicBoolean();
 
         AbstractSegmentAccessor(int id, MemorySegment segment) {
             this.id = id;
@@ -134,7 +136,7 @@ public class TestHandshake {
     static abstract class AbstractBufferAccessor extends AbstractSegmentAccessor {
         final ByteBuffer bb;
 
-        AbstractBufferAccessor(int id, MemorySegment segment) {
+        AbstractBufferAccessor(int id, MemorySegment segment, Arena _unused) {
             super(id, segment);
             this.bb = segment.asByteBuffer();
         }
@@ -142,7 +144,7 @@ public class TestHandshake {
 
     static class SegmentAccessor extends AbstractSegmentAccessor {
 
-        SegmentAccessor(int id, MemorySegment segment) {
+        SegmentAccessor(int id, MemorySegment segment, Arena _unused) {
             super(id, segment);
         }
 
@@ -150,7 +152,7 @@ public class TestHandshake {
         void doAccess() {
             int sum = 0;
             for (int i = 0; i < segment.byteSize(); i++) {
-                sum += MemoryAccess.getByteAtOffset(segment, i);
+                sum += segment.get(JAVA_BYTE, i);
             }
         }
     }
@@ -160,7 +162,7 @@ public class TestHandshake {
         MemorySegment first, second;
 
 
-        SegmentCopyAccessor(int id, MemorySegment segment) {
+        SegmentCopyAccessor(int id, MemorySegment segment, Arena _unused) {
             super(id, segment);
             long split = segment.byteSize() / 2;
             first = segment.asSlice(0, split);
@@ -175,7 +177,7 @@ public class TestHandshake {
 
     static class SegmentFillAccessor extends AbstractSegmentAccessor {
 
-        SegmentFillAccessor(int id, MemorySegment segment) {
+        SegmentFillAccessor(int id, MemorySegment segment, Arena _unused) {
             super(id, segment);
         }
 
@@ -189,11 +191,11 @@ public class TestHandshake {
 
         final MemorySegment copy;
 
-        SegmentMismatchAccessor(int id, MemorySegment segment) {
+        SegmentMismatchAccessor(int id, MemorySegment segment, Arena arena) {
             super(id, segment);
-            this.copy = MemorySegment.allocateNative(SEGMENT_SIZE, 1, segment.scope());
+            this.copy = arena.allocate(SEGMENT_SIZE, 1);
             copy.copyFrom(segment);
-            MemoryAccess.setByteAtOffset(copy, ThreadLocalRandom.current().nextInt(SEGMENT_SIZE), (byte)42);
+            copy.set(JAVA_BYTE, ThreadLocalRandom.current().nextInt(SEGMENT_SIZE), (byte)42);
         }
 
         @Override
@@ -204,8 +206,8 @@ public class TestHandshake {
 
     static class BufferAccessor extends AbstractBufferAccessor {
 
-        BufferAccessor(int id, MemorySegment segment) {
-            super(id, segment);
+        BufferAccessor(int id, MemorySegment segment, Arena _unused) {
+            super(id, segment, null);
         }
 
         @Override
@@ -221,8 +223,8 @@ public class TestHandshake {
 
         static VarHandle handle = MethodHandles.byteBufferViewVarHandle(short[].class, ByteOrder.nativeOrder());
 
-        public BufferHandleAccessor(int id, MemorySegment segment) {
-            super(id, segment);
+        public BufferHandleAccessor(int id, MemorySegment segment, Arena _unused) {
+            super(id, segment, null);
         }
 
         @Override
@@ -236,10 +238,10 @@ public class TestHandshake {
 
     static class Handshaker implements Runnable {
 
-        final ResourceScope scope;
+        final Arena arena;
 
-        Handshaker(ResourceScope scope) {
-            this.scope = scope;
+        Handshaker(Arena arena) {
+            this.arena = arena;
         }
 
         @Override
@@ -247,7 +249,7 @@ public class TestHandshake {
             start("Handshaker");
             while (true) {
                 try {
-                    scope.close();
+                    arena.close();
                     break;
                 } catch (IllegalStateException ex) {
                     Thread.onSpinWait();
@@ -259,7 +261,7 @@ public class TestHandshake {
     }
 
     interface AccessorFactory {
-        AbstractSegmentAccessor make(int id, MemorySegment segment);
+        AbstractSegmentAccessor make(int id, MemorySegment segment, Arena arena);
     }
 
     @DataProvider
